welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit=false;
	for (i <- 1 to 7) {
	avance()
	if (estSurBiscuit()==true) {
		vuBiscuit=true
	}
	}
	recule(6)
	if (vuBiscuit()==true) { 
		return true;
	}
	else {
		return false;
	}
	
}
